# action_nn_c

./: .codex_build_cnn_rnn_infer.cmd  .gitignore  AGENTS.md  CMakeLists.txt  README.en.md  README.md  build_demos.ps1  demo_full_flow.md  demo_network_functions.c  demo_train_data.csv  demo_weights_export.c  test.bat  test_weights_export.c
demo/: CMakeLists.txt  demo.md  demo_common.cmake  demo_runtime_paths.h
demo/cnn_rnn_react/: cnn_rnn_react.md  cnn_rnn_react_scene.c  cnn_rnn_react_scene.h  generate_main.c  infer_main.c  run_demo.bat  train_main.c
demo/cnn_rnn_react/generate/: CMakeLists.txt
demo/cnn_rnn_react/infer/: CMakeLists.txt
demo/cnn_rnn_react/train/: CMakeLists.txt
demo/cs/tools/: CMakeLists.txt  cs_capture_session.c  cs_dataset_build.c  cs_dataset_report.c  cs_label_session.c  cs_tool_common.c  cs_tool_common.h
demo/goal/: CMakeLists.txt  README.md  main.c
demo/hybrid_route/: generate_main.c  hybrid_route.md  infer_main.c  run_demo.bat  run_demo.sh  train_main.c
demo/hybrid_route/generate/: CMakeLists.txt
demo/hybrid_route/train/: CMakeLists.txt
demo/mnist/: generate_main.c  infer_main.c  mnist.md  mnist_dataset.c  mnist_dataset.h  run_demo.bat  run_demo.sh  train_main.c
demo/mnist/generate/: CMakeLists.txt
demo/mnist/infer/: CMakeLists.txt
demo/mnist_cnn/: generate_main.c  infer_main.c  mnist_cnn.md  mnist_cnn_dataset.c  mnist_cnn_dataset.h  run_demo.bat  run_demo.sh  train_main.c
demo/mnist_cnn/generate/: CMakeLists.txt
demo/mnist_cnn/infer/: CMakeLists.txt
demo/move/: CMakeLists.txt  generate_main.c  infer_main.c  move.md  run_all.bat  run_demo.bat  run_demo.sh  train_main.c
demo/move/generate/: CMakeLists.txt
demo/move/infer/: CMakeLists.txt
demo/nested_nav/: generate_main.c  infer_main.c  nested_nav.md  nested_nav_scene.h  run_demo.bat  run_demo.sh  train_main.c
demo/nested_nav/generate/: CMakeLists.txt
demo/road_graph_nav/infer/: CMakeLists.txt
demo/sevenseg/: CMakeLists.txt  README.md  benchmark_main.c  generate_main.c  infer_bin_main.c  infer_c_array_main.c  infer_c_func_main.c  infer_main.c  main.c  run_all.bat  run_demo.bat  run_demo.sh  sevenseg.md  sevenseg_shared.c  sevenseg_shared.h  train_main.c
demo/sevenseg/generate/: CMakeLists.txt
demo/sevenseg/infer/: CMakeLists.txt
demo/sevenseg/train/: CMakeLists.txt
demo/step/: CMakeLists.txt  README.md  main.c
demo/transformer/: CMakeLists.txt  generate_main.c  infer_main.c  run_all.bat  run_demo.bat  run_demo.sh  train_main.c  transformer.md
demo/transformer/generate/: CMakeLists.txt
demo/transformer/infer/: CMakeLists.txt
demo/transformer/train/: CMakeLists.txt
demo/transformer_simple/: CMakeLists.txt  README.md  main.c
demo/transformer_simple/data/: vocab.txt  weights_export.c
docs/: application_manual.md  developer_manual.md  network_design_manual.md  network_topology_requirements.md  profiler_api_contract_draft.md  profiler_development_plan.md  profiler_interface_draft.md  profiler_module_blueprint.md  usage_playbook.md  user_manual.md  user_story_from_zero.md
report/: code_quality_report.md
src/: CMakeLists.txt  src.md
src/core/: network_spec.c  ops.c  platform_driver.c  protocol.c  tensor.c  tokenizer.c  weights_io.c  workflow.c
src/include/: config_user.h  csv_loader.h  model.h  network_def.h  network_spec.h  ops.h  platform_driver.h  platform_runtime.h  protocol.h  tensor.h  tokenizer.h  tokenizer_runtime.h  weights_io.h  workflow.h  workflow_status.h
src/infer/: CMakeLists.txt  infer.md  infer_runtime.c  infer_runtime.h  workflow_runtime.c
src/infer/include/: workflow_infer.h
src/model/: transformer.c
src/nn/: CMakeLists.txt  nn.md  nn_codegen_hooks.h  nn_graph_contract.h  nn_graph_infer_contract.c  nn_graph_train_contract.c  nn_infer_registry.c  nn_infer_registry.h  nn_train_registry.c  nn_train_registry.h
src/nn/types/: README.md  types.md
src/nn/types/cnn/: README.md  cnn_config.h  cnn_infer_ops.c  cnn_infer_ops.h  cnn_train_ops.c  cnn_train_ops.h  nn_type_cnn_infer.c  nn_type_cnn_train.c
src/nn/types/cnn_dual_pool/: README.md  cnn_dual_pool_config.h  cnn_dual_pool_infer_ops.c  cnn_dual_pool_infer_ops.h  cnn_dual_pool_train_ops.c  cnn_dual_pool_train_ops.h  nn_type_cnn_dual_pool_infer.c  nn_type_cnn_dual_pool_train.c
src/nn/types/gnn/: README.md  gnn.md  gnn_config.h  gnn_infer_ops.c  gnn_infer_ops.h  gnn_train_ops.c  gnn_train_ops.h  nn_type_gnn_infer.c  nn_type_gnn_train.c
src/nn/types/mlp/: README.md  mlp.md  mlp_code_gen.c  mlp_config.h  mlp_infer_ops.c  mlp_infer_ops.h  mlp_layers.c  mlp_layers.h  mlp_train_ops.c  mlp_train_ops.h  nn_type_mlp_infer.c  nn_type_mlp_train.c
src/nn/types/rnn/: README.md  nn_type_rnn_infer.c  nn_type_rnn_train.c  rnn_config.h  rnn_infer_ops.c  rnn_infer_ops.h  rnn_train_ops.c  rnn_train_ops.h
src/nn/types/transformer/: README.md  nn_type_transformer_infer.c  nn_type_transformer_train.c  transformer.md  transformer_code_gen.c  transformer_config.h  transformer_infer_ops.c  transformer_infer_ops.h  transformer_train_ops.c  transformer_train_ops.h
src/platform/: platform.md  platform_driver.c
src/platform/esp32/: driver_esp32.c  esp32.md
src/platform/pc/: driver_pc.c  pc.md
src/profiler/: CMakeLists.txt  network_def.c  network_def.h  prof_codegen.c  prof_codegen.h  prof_error.c  prof_error.h  prof_flatten.c  prof_flatten.h  prof_hash.c  prof_hash.h  prof_path.c  prof_path.h  prof_validate.c  prof_validate.h  profiler.c  profiler.h  profiler.md  profiler_code_gen.c  profiler_code_gen.h  profiler_types.c  profiler_types.h
src/tokenizer/: tokenizer.c  tokenizer.md  tokenizer_runtime.c
src/tools/: c99_full_demo.c  min_train_loop.c  profiler.c
src/train/: CMakeLists.txt  csv_loader.c  train.md  train_runtime.c  train_runtime.h  workflow_train.c
src/train/include/: workflow_train.h
wasm/: CMakeLists.txt  README.md  wasm.md
wasm/config/: wasm_config.h
wasm/examples/: browser_demo.html
wasm/js/: action_nn_c.d.ts  action_nn_c.js
wasm/scripts/: build_wasm.ps1  build_wasm.sh
wasm/src/: wasm_exports.c
web_editor/: README.md  index.html  start.sh
(+49 files in other folders)
